[gd_scene load_steps=7 format=2]

[ext_resource path="res://ressources/Font/TiwipiFont.tres" type="DynamicFont" id=1]
[ext_resource path="res://scripts/UI/ClassMenu.gd" type="Script" id=2]
[ext_resource path="res://scenes/Players/Bodies/RepairerBody.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Players/Bodies/SniperBody.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Players/Bodies/BasicSoldierBody.tscn" type="PackedScene" id=5]
[ext_resource path="res://scenes/Players/Bodies/LumberJackBody.tscn" type="PackedScene" id=6]

[node name="ClassMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
basicSoldierBody = ExtResource( 5 )
repairerBody = ExtResource( 3 )
lumberJackBody = ExtResource( 6 )
sniperBody = ExtResource( 4 )

[node name="BasicSoldier" type="Button" parent="."]
margin_right = 464.0
margin_bottom = 1080.0
custom_fonts/font = ExtResource( 1 )
text = "Basic Soldier"

[node name="Repairer" type="Button" parent="."]
margin_left = 496.0
margin_right = 944.0
margin_bottom = 1080.0
custom_fonts/font = ExtResource( 1 )
text = "Repairer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LumberJack" type="Button" parent="."]
margin_left = 976.0
margin_right = 1424.0
margin_bottom = 1080.0
custom_fonts/font = ExtResource( 1 )
text = "LumberJack"

[node name="Sniper" type="Button" parent="."]
margin_left = 1456.0
margin_right = 1920.0
margin_bottom = 1080.0
custom_fonts/font = ExtResource( 1 )
text = "Sniper"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="BasicSoldier" to="." method="_on_BasicSoldier_pressed"]
[connection signal="pressed" from="Repairer" to="." method="_on_Repairer_pressed"]
[connection signal="pressed" from="LumberJack" to="." method="_on_LumberJack_pressed"]
[connection signal="pressed" from="Sniper" to="." method="_on_Sniper_pressed"]
